--- a/gloob/store/signup.html
+++ b/gloob/store/signup.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Sign Up - GlooB</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sign Up - GlooB</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+<style>
+body { background-color: rgb(230, 31, 117); font-family: Arial, sans-serif; }
+.signup-container { max-width: 400px; margin: 100px auto; background-color: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); }
+.signup-container h2 { text-align: center; margin-bottom: 20px; color: rgb(230, 31, 117); }
+.signup-container form input { margin-bottom: 15px; }
+.signup-container form button { background-color: rgb(230, 31, 117); color: white; width: 100%; padding: 10px; border: none; border-radius: 5px; }
+.signup-container form button:hover { background-color: #d12799; }
+.signup-container a { display: block; text-align: center; margin-top: 10px; color: rgb(230, 31, 117); text-decoration: none; }
+.signup-container a:hover { text-decoration: underline; }
+</style>
 </head>
-<body style="background-color: #e71f75; color: white;">
+<body>
 
-<div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-5">
-            <div class="card p-4" style="background-color: #fff; color: black; border-radius: 10px;">
-                <h3 class="text-center mb-3">Create Account</h3>
-                <form method="post">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <button type="submit" class="btn btn-primary w-100">Sign Up</button>
-                </form>
-                <p class="mt-3 text-center">
-                    Already have an account? <a href="{% url 'login' %}">Login</a>
-                </p>
-            </div>
-        </div>
-    </div>
+<div class="signup-container">
+    <h2>Sign Up</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Sign Up</button>
+    </form>
+    <a href="{% url 'login' %}">Already have an account? Login</a>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
